# AutoResearch

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LOOP.md  README.md  RMB-Cost.md  STATE.md  loop-budget.md  loop-constraints.md  loop-run-log.md  pyproject.toml
.agents/skills/: 15-verl-feature-intelligence
.archon/scripts/: ar-skill-01.py  ar-skill-02.py  ar-skill-03.py  ar-skill-04.py  ar-skill-05.py  ar-skill-06.py  ar-skill-07.py  ar-skill-08.py
.archon/workflows/: ar-min-loop.yaml  ar-skill-01.yaml  ar-skill-02.yaml  ar-skill-03.yaml  ar-skill-04.yaml  ar-skill-05.yaml  ar-skill-06.yaml  ar-skill-07.yaml  ar-skill-08.yaml
.codex/agents/: verifier.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-GAP-DIAGNOSIS.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
autoresearch/: __init__.py  __main__.py  _bootstrap.py  cli.py  ping.py
autoresearch/archon/: __init__.py  runtime.py
autoresearch/bmc/: __init__.py  client.py  identify.py  power.py
autoresearch/collect/: __init__.py  cli.py  manifest.py  minimal.py
autoresearch/config/: __init__.py  _common.py  init.py  keyring_cli.py  show.py  validate.py
autoresearch/e2e/: __init__.py  report_check.py  smoke.py
autoresearch/hw/: __init__.py  models.py  monitor.py  parser.py  probe.py
autoresearch/net/: __init__.py  curl.py  models.py  probe.py  tunnel.py
autoresearch/orchestrator/: __init__.py  checks.py  (+3 more)
config/: config.example.yaml  data.example.yaml  discovered_large_assets.scan.json
datalake/: README.md
diagram/: autoresearch-loop.architecture.html  autoresearch-loop.architecture.json  autoresearch-loop.workflow.html  autoresearch-loop.workflow.json  gen.py
docs/: LOOP_ENGINEERING.md  VISUALIZATION.md  safety.md  verl-case.md
services/: README.md
tests/: __init__.py  test_archon_runtime.py  test_archon_workflows.py  test_bmc.py  test_bootstrap.py  test_cli.py  test_collect_cli.py  test_collect_manifest.py  test_collect_minimal.py  test_config_init.py  test_config_keyring.py  test_config_show.py  test_config_validate.py  test_datalake_logs_collector.py  test_datalake_manifest.py  test_datalake_prometheus_push.py  test_datalake_wandb_sync.py  test_e2e_smoke.py  test_hw_cli.py  test_hw_monitor.py  test_hw_parser.py  test_hw_probe.py  test_minimal_runner.py  test_net_cli.py  test_net_curl.py  test_net_probe.py  test_net_tunnel.py  test_orchestrator_check.py  test_orchestrator_smoke.py  test_orchestrator_verl_case.py  test_ping.py  test_reach_cli.py  test_reach_tester.py  test_report_cli.py  test_report_loader.py  test_report_prometheus.py  test_report_render.py  test_report_verl_case.py  test_report_wandb.py  test_ssh_bootstrap.py  (+8 more)
verl-workspace-adapter/: README.md  __init__.py
workspace-adapter/: README.md  __init__.py
workspace-core/: README.md  __init__.py  asset_registry.py
workspace_core/: __init__.py
(+1078 files in other folders)
