[project]
name = "autoresearch"
version = "0.1.0"
description = "Local LLM training workflow platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AutoResearch Contributors"},
]
keywords = ["llm", "training", "workflow", "wandb", "prometheus"]
dependencies = [
    "click>=8.1",
    "keyring>=25.7.0",
    "paramiko>=5.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.scripts]
autoresearch = "autoresearch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autoresearch"]

# workspace-core 用 hyphen 目录但作为 workspace_core 包导入
[tool.hatch.build.targets.wheel.force-include]
"workspace-core" = "workspace_core"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
