[project]
name = "autoresearch"
version = "0.1.0"
description = "Local LLM training workflow platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AutoResearch Contributors"},
]
keywords = ["llm", "training", "workflow", "wandb", "prometheus"]
dependencies = [
    "click>=8.1",
    "keyring>=25.7.0",
    "paramiko>=5.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.scripts]
autoresearch = "autoresearch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autoresearch"]

# hyphen 目录 → underscore 模块 (D-44: 训练栈适配, 08-04: datalake)
[tool.hatch.build.targets.wheel.force-include]
"workspace-core" = "workspace_core"
"verl-workspace-adapter" = "verl_workspace_adapter"
"datalake" = "datalake"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
